# foregroundRemoval

./: .gitignore  CMakeLists.txt  README.md  algorithm.hpp  foreground_removal.py  foregroundremove.cpp  foregroundremove.hpp  foregroundremoveparallel.cpp  foregroundremoveparallel.hpp  image.hpp  main.cpp  rgbimage.cpp  rgbimage.hpp  threadpool.cpp  threadpool.hpp
